--- a/package.json
+++ b/package.json
@@ -6,13 +6,27 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "static": "next build && next export"
   },
   "dependencies": {
+    "@capacitor/android": "^5.0.3",
+    "@capacitor/camera": "^5.0.2",
+    "@capacitor/core": "^5.0.3",
+    "@capacitor/filesystem": "^5.0.2",
+    "@capacitor/ios": "^5.0.3",
+    "@capacitor/preferences": "^5.0.2",
+    "@capacitor/share": "^5.0.2",
+    "@ionic/react": "^7.0.7",
+    "@ionic/react-router": "^7.0.7",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
+    "ionicons": "^7.1.0",
     "next": "13.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@capacitor/cli": "^5.0.3"
   }
 }
