--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "ionicons": "^7.1.0",
     "next": "13.4.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@capacitor/cli": "^5.0.3"
