--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "next": "13.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "prop-types": "^15.8.1"
   },
   "devDependencies": {
     "@capacitor/cli": "^5.0.3"
