--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^5.3.5",
-    "prop-types": "^15.8.1"
+    "prop-types": "^15.8.1",
+    "ljit-lib": "2.1.2"
   },
   "devDependencies": {
     "@capacitor/cli": "^5.0.3"
